tags, avatar, username clickable areas fix. content shift when scroll appears fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  overflow-y: scroll;
+}
+
 @media screen and (max-width: 640px) {
   .main {
     padding: 0;
